[workspace]
resolver = "2"
members = [
    "easytier",
    "easytier-gui/src-tauri",
    "easytier-rpc-build",
    "easytier-web",
    "easytier-contrib/easytier-ffi",
    "easytier-contrib/easytier-uptime",
    "easytier-contrib/easytier-android-jni",
]
default-members = ["easytier", "easytier-web"]
exclude = [
    "easytier-contrib/easytier-ohrs", # it needs ohrs sdk
]

[profile.dev]
panic = "unwind"
debug = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.metadata.cross.target.target.i686-unknown-linux-musl]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install protobuf-compiler:$CROSS_DEB_ARCH"
]
