[workspace]
resolver = "2"
members = [
    "easytier",
    "easytier-gui/src-tauri",
    "easytier-rpc-build",
    "easytier-web",
    "easytier-contrib/easytier-ffi",
    "easytier-contrib/easytier-uptime",
    "easytier-contrib/easytier-android-jni",
]
default-members = ["easytier", "easytier-web"]
exclude = [
    "easytier-contrib/easytier-ohrs", # it needs ohrs sdk
]

[profile.dev]
panic = "unwind"
debug = 2

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true

[target.i686-unknown-linux-musl]
image = "dph5199278/i686-unknown-linux-musl:0.2.5"
